# derp

./: .stylish-haskell.yaml  README.md  derp.cabal
src/Text/: Derp.hs
