name:                   derp
author:                 David Darais
maintainer:             david.darais@gmail.com
version:                0.1.7
build-type:             Simple
cabal-version:          >= 1.10
category:               Parsing
synopsis:               Derivative parsing for Haskell
description:            A parser based on derivatives of parser combinators
                        (Might and Darais).
                        
                        Our paper on Arxiv details the theory of parsing
                        with derivatives:
                        <http://arxiv.org/abs/1010.5023>.
                        
                        This implementation uses my latest work on the theory
                        that brings the O(n*|G|^2) complexity bound to O(n) for
                        parsing most not-painfully-ambiguous grammars. |G| is
                        the size of the initial grammar, n would be size of the
                        input. These bounds are based off of observation and
                        intuition; they are not proven yet.

                        This implementation will not terminate if the resulting
                        parse forest is infinite. We know how to extend the
                        implementation to work for infinite parse forests with
                        little effort. If you're interested, send me an email.
extra-source-files:     README.md
license-file:           LICENSE.md
license:                BSD3

library
    build-depends:      base       >=4.6 && <5
                      , containers ==0.5.*
                      , mtl        ==2.2.*
    default-language:   Haskell2010
    exposed-modules:    Text.Derp
    ghc-options:        -Wall
    hs-source-dirs:     library